--- a/.github/workflows/aggtrades-incremental.yml
+++ b/.github/workflows/aggtrades-incremental.yml
@@ -9,8 +9,9 @@ on:
       end_date:
         description: 'Enddatum (YYYY-MM-DD)'
         required: true
+
   schedule:
-    - cron: '0 8 * * *'  # täglich 03:00 UTC
+    - cron: '0 8 * * *'
 
 jobs:
   download-and-feature:
@@ -18,13 +19,21 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        symbol: [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
+        symbol:
+          - BTCUSDT
+          - ETHUSDT
+          - BNBUSDT
+          - SOLUSDT
+          - XRPUSDT
+          - ENAUSDT
+      max-parallel: 1
     env:
       REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       REPO:       ${{ github.repository }}
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -33,49 +42,92 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install deps
-        run: pip install --upgrade pandas pyarrow
+      - name: Install dependencies
+        run: |
+          pip install --upgrade pandas pyarrow
 
-      - name: Calc global dates
+      - name: Calc dates
         id: dates
         run: |
-          echo "global_start=${{ inputs.start_date }}" >> $GITHUB_OUTPUT
-          echo "global_end=${{ inputs.end_date  }}" >> $GITHUB_OUTPUT
+          echo "global_start=2025-01-01" >> $GITHUB_OUTPUT
+          echo "today=$(date -I)"          >> $GITHUB_OUTPUT
 
-      - name: Download & unzip raw CSVs
+      - name: Determine resume point
+        id: resume
         run: |
           SYMBOL=${{ matrix.symbol }}
-          SDG=${{ steps.dates.outputs.global_start }}
-          ED=${{ steps.dates.outputs.global_end }}
-          INC=$(python3 - <<'PYCODE'
-import sys, json
-# no-op here; inception logic only in script
-print("")
-PYCODE)
-          mkdir -p data/aggTrades/$SYMBOL
-          # always download entire window: script droppt schon Alt-Daten raus
-          CUR=$SDG
+          DIR=historical_tech/aggTrades/features
+          old=$(ls $DIR/${SYMBOL}-features-*.parquet 2>/dev/null | sort | tail -n1 || true)
+          if [[ -n "$old" ]]; then
+            old_end=$(basename "$old" .parquet \
+              | sed -E 's/^.*_to_([0-9]{4}-[0-9]{2}-[0-9]{2})$/\1/')
+            start=$(date -I -d "$old_end + 1 day")
+            echo "mode=append" >> $GITHUB_OUTPUT
+            echo "start=$start"  >> $GITHUB_OUTPUT
+          else
+            echo "mode=fresh"                           >> $GITHUB_OUTPUT
+            echo "start=${{ steps.dates.outputs.global_start }}" >> $GITHUB_OUTPUT
+          fi
+          echo "end=${{ steps.dates.outputs.today }}"             >> $GITHUB_OUTPUT
+
+      - name: Download & extract aggTrades with Inception
+        shell: bash
+        run: |
+          SYMBOL=${{ matrix.symbol }}
+          SD=${{ steps.resume.outputs.start }}
+          ED=${{ steps.resume.outputs.end }}
+
+          # Inception-Logik
+          case "$SYMBOL" in
+            BTCUSDT|ETHUSDT) INC="2019-12-31";;
+            XRPUSDT)         INC="2020-01-06";;
+            BNBUSDT)         INC="2020-02-10";;
+            SOLUSDT)         INC="2020-09-14";;
+            ENAUSDT)         INC="2024-04-02";;
+            *)               INC=$SD ;;
+          esac
+
+          if [[ "$(date -d"$SD" +%s)" -lt "$(date -d"$INC" +%s)" ]]; then
+            SD="$INC"
+          fi
+
+          echo "→ Download days from $SD to $ED"
+          DIR=data/aggTrades/$SYMBOL
+          mkdir -p "$DIR"
+          # 1-Day Overlap: Start-1
+          CUR=$(date -I -d "$SD -1 day")
           while [[ "$CUR" < "$ED" || "$CUR" == "$ED" ]]; do
             ZIP="${SYMBOL}-aggTrades-${CUR}.zip"
-            curl -sSf "https://data.binance.vision/data/futures/um/daily/aggTrades/$SYMBOL/$ZIP" -o "$ZIP" && \
-              unzip -p "$ZIP" > data/aggTrades/$SYMBOL/${ZIP%.zip}.csv && rm -f "$ZIP" || echo "⚠️ Missing $ZIP"
+            echo "→ Fetching $ZIP"
+            if curl -sSf "https://data.binance.vision/data/futures/um/daily/aggTrades/$SYMBOL/$ZIP" -o "$ZIP"; then
+              unzip -p "$ZIP" > "$DIR/${ZIP%.zip}.csv" && rm -f "$ZIP"
+            else
+              echo "⚠️ Missing $ZIP – skipping"
+              rm -f "$ZIP"
+            fi
             CUR=$(date -I -d "$CUR +1 day")
           done
 
       - name: Feature extraction & append
         run: |
           mkdir -p historical_tech/aggTrades/features
-          OUT=historical_tech/aggTrades/features/${{ matrix.symbol }}-features-${{ steps.dates.outputs.global_start }}_to_${{ steps.dates.outputs.global_end }}.parquet
-          python3 extract_aggTrades_features_incremental.py \
+          OUT="historical_tech/aggTrades/features/${{ matrix.symbol }}-features-${{ steps.dates.outputs.global_start }}_to_${{ steps.resume.outputs.end }}.parquet"
+          python3 extract_aggTrades_features.py \
             --input-dir   data/aggTrades/${{ matrix.symbol }} \
-            --output-file $OUT \
-            --start-date  ${{ steps.dates.outputs.global_start }} \
-            --end-date    ${{ steps.dates.outputs.global_end }}
+            --start-date  "${{ steps.dates.outputs.global_start }}" \
+            --end-date    "${{ steps.resume.outputs.end }}" \
+            --output-file "$OUT"
 
       - name: Commit & Push
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git fetch origin main && git checkout main
-          git add historical_tech/aggTrades/features && git commit -m "♻️ ${{ matrix.symbol }} aggTrades-Features up to ${{ steps.dates.outputs.global_end }}" || echo "No changes"
-          git push https://x-access-token:${REPO_TOKEN}@github.com/${REPO}.git HEAD:main
+          git checkout main
+          git pull --rebase origin main
+          git add historical_tech/aggTrades/features
+          git commit -m "♻️ ${{ matrix.symbol }} aggTrades-Features ${{ steps.dates.outputs.global_start }} to ${{ steps.resume.outputs.end }}" || echo "No changes"
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
+
+      - name: Cleanup raw data
+        if: always()
+        run: rm -rf data/aggTrades/${{ matrix.symbol }}
