--- a/.github/workflows/cleanup_historical.yml
+++ b/.github/workflows/cleanup_historical.yml
@@ -7,7 +7,7 @@ on:
       dry-run:
         description: 'Nur anzeigen (true) oder wirklich löschen (false)'
         required: true
-        default: 'false'
+        default: 'true'
         type: boolean
 
 jobs:
