--- a/.github/workflows/download_metrics.yml
+++ b/.github/workflows/download_metrics.yml
@@ -1,10 +1,10 @@
-name: 📥 Download & Commit metrics
+name: 3️⃣📥 Download & Commit metrics
 
 on:
   workflow_dispatch:
   schedule:
     # täglich 08:00 UTC
-    - cron: '0 8 * * *'
+    - cron: '20 8 * * *'
 
 jobs:
   download:
