--- a/.github/workflows/aggtrades-incremental.yml
+++ b/.github/workflows/aggtrades-incremental.yml
@@ -1,4 +1,4 @@
-name: "4️⃣📥 Incremental Download & Feature aggTrades per Symbol"
+name: "4️⃣📥🛠️ aggTrades Inc. Download & Feat."
 
 on:
   workflow_dispatch:
