--- a/.github/workflows/bookdepth-incremental.yml
+++ b/.github/workflows/bookdepth-incremental.yml
@@ -1,4 +1,4 @@
-name: "5️⃣📥 Incremental Download & Feature bookDepth per Symbol"
+name: "5️⃣📥🛠️ bookDepth Inc. Download & Feat."
 
 on:
   # 1) Manuelles Auslösen
