--- a/.github/workflows/download_indexPriceKlines.yml
+++ b/.github/workflows/download_indexPriceKlines.yml
@@ -1,4 +1,4 @@
-name: 2️⃣📥 Download & Commit indexPriceKlines (1h & 4h)
+name: 2️⃣📂 Download & Commit indexPriceKlines (1h & 4h)
 
 on:
   workflow_dispatch:
