--- a/.github/workflows/bookdepth-incremental.yml
+++ b/.github/workflows/bookdepth-incremental.yml
@@ -1,7 +1,6 @@
 name: "5️⃣📥🛠️ bookDepth Inc. Download & Feat."
 
 on:
-  # 1) Manuelles Auslösen
   workflow_dispatch:
     inputs:
       start_date:
@@ -10,10 +9,8 @@ on:
       end_date:
         description: 'Enddatum (YYYY-MM-DD)'
         required: true
-
-  # 2) Geplanter Run um 08:00 UTC täglich
   schedule:
-    - cron: '40 8 * * *'
+    - cron: '40 8 * * *'  # täglich 08:40 UTC
 
 jobs:
   download-and-feature:
@@ -21,13 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        symbol:
-          - BTCUSDT
-          - ETHUSDT
-          - BNBUSDT
-          - SOLUSDT
-          - XRPUSDT
-          - ENAUSDT
+        symbol: [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ENAUSDT]
       max-parallel: 1
     env:
       REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -51,31 +42,27 @@ jobs:
       - name: Calc dates
         id: dates
         run: |
-          # fixed global start for 2025-files
-          echo "global_start=2025-01-01" >> $GITHUB_OUTPUT
-          # end = gestern, da heutiges ZIP noch nicht existiert
+          echo "global_start=2025-01-01"       >> $GITHUB_OUTPUT
           echo "today=$(date -I -d 'yesterday')" >> $GITHUB_OUTPUT
 
       - name: Determine resume point
         id: resume
         run: |
           SYMBOL=${{ matrix.symbol }}
-          DIR=historical_tech/bookDepth/features
-          # finde zuletzt erzeugtes Parquet
+          DIR=features/bookDepth
           old=$(ls $DIR/${SYMBOL}-features-*.parquet 2>/dev/null | sort | tail -n1 || true)
           if [[ -n "$old" ]]; then
-            old_end=$(basename "$old" .parquet \
-              | sed -E 's/^.*_to_([0-9]{4}-[0-9]{2}-[0-9]{2})$/\1/')
+            old_end=$(basename "$old" .parquet | sed -E 's/^.*_to_([0-9\-]+)$/\1/')
             start=$(date -I -d "$old_end + 1 day")
             echo "mode=append" >> $GITHUB_OUTPUT
             echo "start=$start"  >> $GITHUB_OUTPUT
           else
-            echo "mode=fresh"                           >> $GITHUB_OUTPUT
+            echo "mode=fresh" >> $GITHUB_OUTPUT
             echo "start=${{ steps.dates.outputs.global_start }}" >> $GITHUB_OUTPUT
           fi
-          echo "end=${{ steps.dates.outputs.today }}"             >> $GITHUB_OUTPUT
+          echo "end=${{ steps.dates.outputs.today }}" >> $GITHUB_OUTPUT
 
-      - name: Download & unzip bookDepth with Inception
+      - name: Download & unzip bookDepth
         shell: bash
         run: |
           SYMBOL=${{ matrix.symbol }}
@@ -89,17 +76,10 @@ jobs:
             ENAUSDT)                           INC="2024-04-02";;
             *)                                 INC=$SD ;;
           esac
+          [[ "$(date -d"$SD" +%s)" -lt "$(date -d"$INC" +%s)" ]] && SD="$INC"
 
-          # sicherstellen, dass SD ≥ INC
-          if [[ "$(date -d"$SD" +%s)" -lt "$(date -d"$INC" +%s)" ]]; then
-            SD="$INC"
-          fi
-
-          echo "→ Download days from $SD to $ED"
-
-          DIR=data/bookDepth/$SYMBOL
-          mkdir -p "$DIR"
-
+          echo "→ Downloading bookDepth from $SD to $ED"
+          mkdir -p raw/bookDepth/"$SYMBOL"
           CUR="$SD"
           while [[ "$CUR" < "$ED" || "$CUR" == "$ED" ]]; do
             ZIP="${SYMBOL}-bookDepth-${CUR}.zip"
@@ -107,7 +87,8 @@ jobs:
             if curl -sSf \
                "https://data.binance.vision/data/futures/um/daily/bookDepth/$SYMBOL/$ZIP" \
                -o "$ZIP"; then
-              unzip -q -o "$ZIP" -d "$DIR" && rm -f "$ZIP"
+              unzip -q -o "$ZIP" -d raw/bookDepth/"$SYMBOL"
+              rm -f "$ZIP"
             else
               echo "⚠️ Missing $ZIP – skipping"
               rm -f "$ZIP"
@@ -117,12 +98,13 @@ jobs:
 
       - name: Feature extraction & append
         run: |
-          mkdir -p historical_tech/bookDepth/features
-          OUT="historical_tech/bookDepth/features/${{ matrix.symbol }}-features-${{ steps.dates.outputs.global_start }}_to_${{ steps.resume.outputs.end }}.parquet"
+          mkdir -p features/bookDepth
+          OUT="features/bookDepth/${{ matrix.symbol }}-features-${{ steps.dates.outputs.global_start }}_to_${{ steps.resume.outputs.end }}.parquet"
           python3 extract_bookDepth_features.py \
-            --input-dir   data/bookDepth/${{ matrix.symbol }} \
+            --in-dir      raw/bookDepth/${{ matrix.symbol }} \
             --start-date  "${{ steps.dates.outputs.global_start }}" \
             --end-date    "${{ steps.resume.outputs.end }}" \
+            --out-dir     features/bookDepth \
             --output-file "$OUT"
 
       - name: Commit & Push
@@ -131,10 +113,12 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git checkout main
           git pull --rebase origin main
-          git add historical_tech/bookDepth/features
-          git commit -m "♻️ ${{ matrix.symbol }} bookDepth-Features ${{ steps.dates.outputs.global_start }} to ${{ steps.resume.outputs.end }}" || echo "No changes"
+          git add features/bookDepth
+          git commit -m "♻️ ${{ matrix.symbol }} bookDepth-Features ${{
+            steps.dates.outputs.global_start }} to ${{ steps.resume.outputs.end }}" || echo "No changes"
           git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
 
       - name: Cleanup raw data
         if: always()
-        run: rm -rf data/bookDepth/${{ matrix.symbol }}
+        run: |
+          rm -rf raw/bookDepth/${{ matrix.symbol }}
