--- a/.github/workflows/bookdepth-incremental.yml
+++ b/.github/workflows/bookdepth-incremental.yml
@@ -49,7 +49,7 @@ jobs:
         id: resume
         run: |
           SYMBOL=${{ matrix.symbol }}
-          DIR=features/bookDepth
+          DIR=features/bookDepth/${{ matrix.symbol }}
           old=$(ls $DIR/${SYMBOL}-features-*.parquet 2>/dev/null | sort | tail -n1 || true)
           if [[ -n "$old" ]]; then
             old_end=$(basename "$old" .parquet | sed -E 's/^.*_to_([0-9\-]+)$/\1/')
@@ -98,7 +98,7 @@ jobs:
 
       - name: Feature extraction & append
         run: |
-          mkdir -p features/bookDepth
+          mkdir -p features/bookDepth/${{ matrix.symbol }}
           OUT="features/bookDepth/${{ matrix.symbol }}-features-${{ steps.dates.outputs.global_start }}_to_${{ steps.resume.outputs.end }}.parquet"
           python3 extract_bookDepth_features.py \
             --in-dir      raw/bookDepth/${{ matrix.symbol }} \
